<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" >
            <menu>
                <item android:id="@+id/nav_search"
                    android:title="@string/search_lowercase" />
                <item android:id="@+id/nav_discover"
                    android:title="@string/discover_lowercase" />

            </menu>
        </item>

        <item
            android:id="@+id/nav_lists"
            android:title="@string/lists" >
            <menu>
                <item
                    android:id="@+id/nav_list_overview"
                    android:title="@string/menu_lists" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_login"
            android:title="@string/back_to_login_page" />

</menu>