<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:elevation="10dp"
    android:layout_margin="7dp"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cardview_light_background">

        <RelativeLayout
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <ImageView
                android:id="@+id/rec_movie_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:padding="5dp">

            <TextView
                android:id="@+id/rec_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title_placeholder"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ln_layout_footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/rec_movie_rating"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="202dp"
                android:layout_toEndOf="@+id/ratingstar"
                android:text="@string/movie_info_placeholder"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/ratingstar" />

            <TextView
                android:id="@+id/rec_movie_releasedate"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:text="@string/movie_info_placeholder"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/calendar" />

            <ImageView
                android:id="@+id/ratingstar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/star_desc"
                app:srcCompat="@drawable/ic_rating_star"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="204dp"
                app:srcCompat="@drawable/ic_calendar" />

        </RelativeLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>