<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.Home.HomeFragment">

    <!--Base CardView-->
    <androidx.cardview.widget.CardView
        android:id="@+id/search_options"
        style="@style/Base.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--This is a ConstraintLayout for the entire CardView
                   including the expandable portion-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/base_cardview"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
            tools:layout_editor_absoluteX="-55dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fixed_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">


                <ImageView
                    android:id="@+id/btn_expand_filter_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    android:visibility="visible"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_expand_sort_options"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_filter" />

                <ImageView
                    android:id="@+id/btn_expand_sort_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_sort" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/hidden_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:paddingHorizontal="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fixed_layout">

                <!--Child LinearLayout 1-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/release_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/release_year"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/list_title" />

                    <Spinner
                        android:id="@+id/genre_spinner"
                        android:layout_width="187dp"
                        android:layout_height="wrap_content"
                        android:maxHeight="300dp"
                        android:minHeight="42dp"
                        android:prompt="@string/genre"
                        android:spinnerMode="dialog"
                        app:layout_constraintEnd_toEndOf="parent" />

                </LinearLayout>

                <!--Child LinearLayout 2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rating:"
                        android:textSize="18dp"
                        android:layout_marginEnd="5dp"/>

                    <EditText
                        android:id="@+id/minimum_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/max_rating"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/list_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textSize="18sp"
                        android:layout_marginEnd="5dp"/>

                    <EditText
                        android:id="@+id/maximum_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/min_rating"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/list_title" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/adult_switch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Adult"
                        android:textSize="18sp"
                        android:textAlignment="textEnd"/>

                </LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/search_options"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>